[package]
name = "conv"
version = "0.1.0"
authors = ["Jonir Rings <peterpuyi@live.cn>"]
description = "Convert Nintendo 3DS CCI (.3ds/.cci) to CIA"


[dependencies]
shellexpand = "^1.0"
rust-crypto = "^0.2"
clap = {version = "^2.31", features = [ "suggestions", "color" ]}

[lib]
name = "conv_lib"
path = "src/lib.rs"

[[bin]]
name = "conv_bin"
path = "src/bin.rs"