[package]
name = "3dsconv-rust"
version = "0.2.0"
authors = ["Jonir Rings <peterpuyi@live.cn>"]
description = "Convert Nintendo 3DS CCI (.3ds/.cci) to CIA"
edition = '2018'

[dependencies]
shellexpand = "1.0.0"
rust-crypto = "0.2.36"
num-traits = "0.2.9"
num-bigint = "0.2.3"
byteorder = "1.3.2"
indicatif = "0.13.0"
clap = { version = "2.33.0", features = [ "suggestions", "color" ] }

[lib]
name = "conv_lib"
path = "src/lib.rs"

[[bin]]
name = "3dsconv-r"
path = "src/bin.rs"
